WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74122
Forced compositing mode breaks display of full-page PDFs in WK2
https://bugs.webkit.org/show_bug.cgi?id=74122
Summary
Forced compositing mode breaks display of full-page PDFs in WK2
Simon Fraser (smfr)
Reported
2011-12-08 13:17:07 PST
Forced compositing mode breaks display of full-page PDFs in WK2
Attachments
Patch
(7.86 KB, patch)
2011-12-08 13:22 PST
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-12-08 13:22:19 PST
Created
attachment 118458
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-12-08 13:23:10 PST
<
rdar://problem/9550059
>
mitz
Comment 3
2011-12-08 16:48:52 PST
Comment on
attachment 118458
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=118458&action=review
> Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp:245 > + if (m_webPage->mainFrameHasCustomRepresentation()) { > + if (m_alwaysUseCompositing && m_layerTreeHost) > + exitAcceleratedCompositingMode(); > + } else if (m_alwaysUseCompositing && !m_layerTreeHost) > + enterAcceleratedCompositingMode(0); > +}
I think this would read better with an early return if (!m_alwaysUseCompositing). Makes it clearer that this function is only about the forced compositing case.
Simon Fraser (smfr)
Comment 4
2011-12-08 17:46:56 PST
http://trac.webkit.org/changeset/102407
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug