Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.h
@@ -82,6 +82,8 @@ private:
     virtual void didUpdate();
     virtual void suspendPainting();
     virtual void resumePainting();
+    
+    virtual void pageCustomRepresentationChanged();
 
     void sendDidUpdateBackingStoreState();
 
